# Vellum

./: .typos.toml  Cargo.toml  Makefile  README.md  TODO.md
.github/instructions/: vellum-architecture.instructions.md
.github/scripts/: generate_aur_files.sh
.github/workflows/: aur-update.yml  ci.yml  release.yml
client/: Cargo.toml  build.rs
client/src/: cli.rs  imgproc.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: cache.rs  lib.rs  log.rs  mmap.rs  path.rs
common/src/compression/: mod.rs
common/src/compression/comp/: avx2.rs  mod.rs  sse2.rs
common/src/compression/decomp/: avx512.rs  mod.rs  ssse3.rs
common/src/ipc/: error.rs  mod.rs  socket.rs  transmit.rs  types.rs
crates/vellum-ipc/: Cargo.toml
crates/vellum-ipc/src/: envelope.rs  lib.rs  protocol.rs
crates/vellum-tui/: Cargo.toml
crates/vellum-tui/src/: cli.rs  commands.rs  daemon_client.rs  display.rs  images.rs  main.rs
crates/vellum-tui/src/app/: input.rs  state.rs  ui.rs
crates/vellumd/: Cargo.toml
crates/vellumd/src/: cli.rs  main.rs  monitor.rs  paths.rs  state.rs
crates/vellumd/src/ipc/: handlers.rs  server.rs
crates/vellumd/src/renderer/: backend.rs  command_queue.rs  image_blit.rs  image_pipeline.rs  layer_shell.rs  mod.rs  native_commit.rs  output_registry.rs  perf_checks.rs  shm_pool.rs  swaybg.rs  wl_shm_bridge.rs
crates/vellumd/tests/: ipc_flow.rs
daemon/: Cargo.toml  build.rs
daemon/src/: animations.rs  cli.rs  clock.rs  imgproc.rs  lib.rs  main.rs  output_info.rs  shared_imgproc.rs  systemd.rs  wallpaper.rs  wayland.rs
daemon/src/animations/: keyframe.rs  transitions.rs
daemon/src/animations/keyframe/: easing.rs  sequence.rs
daemon/src/animations/keyframe/functions/: dynamic_functions.rs  mod.rs
daemon/src/wallpaper/: bump_pool.rs  cell.rs
docs/: REPO_STRUCTURE.md  STATUS.md
packaging/: .SRCINFO  PKGBUILD  PKGBUILD.template  vellum-daemon.service  vellum.desktop
packaging/autostart/: vellum-daemon.desktop  vellum.desktop
packaging/systemd/user/: vellum-daemon.service
src/: app.rs  main.rs  persistence.rs  ui.rs  wallpapers.rs
src/backend/: awww.rs  mod.rs  monitors.rs
systemd/user/: vellumd.service
vellum/: Cargo.toml  cargo.toml
vellum-tui/: Cargo.toml
vellum-tui/src/: main.rs
vellum-tui/src/tui/: backend.rs  data.rs  mod.rs  model.rs  render.rs  ui.rs
vellum/src/: app.rs  backend.rs  events.rs  imgproc.rs  main.rs  playlist_worker.rs  preview.rs  ui.rs
