[workspace]
resolver = "3"
members = ["daemon", "common", "vellum-tui"]
default-members = ["vellum-tui"]

[workspace.package]
version = "0.12.0"
authors = ["CPTDawn"]
edition = "2024"
description = "Vellum is a native Wayland wallpaper runtime with a shared daemon core and integrated TUI client."
license-file = "LICENSE"
rust-version = "1.89.0"
readme = "README.md"
categories = ["command-line-utilities", "gui"]
keywords = ["wayland", "wallpaper", "tui", "daemon"]

[workspace.dependencies]
common = { path = "common" }
vellum-core = { path = "daemon" }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false
