[workspace]
resolver = "3"
members = ["common", "daemon", "vellum"]
default-members = ["daemon", "vellum"]

[workspace.package]
version = "1.0.1"
authors = ["CPT-Dawn"]
edition = "2024"
license-file = "LICENSE"
rust-version = "1.94.1"

[workspace.dependencies]
common = { path = "common" }

# Enable some optimizations in debug mode. Otherwise, it is a pain to test it
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false
