[package]
name = "vellum-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
vellum-core = { workspace = true }
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
crossterm = { version = "0.29", default-features = false, features = [
    "events",
] }
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
