[package]
name = "vellum-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
vellum-core = { workspace = true }
common = { workspace = true }
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
crossterm = { version = "0.29", default-features = false, features = [
    "events",
] }
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
    "bmp",
] }
nucleo-matcher = "0.3"
directories = "6.0"
anyhow = "1.0"
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
