[package]
name = "vellum-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
vellum-core = { workspace = true }
common = { workspace = true }
tokio = { version = "1.50.0", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
crossterm = { version = "0.29.0", default-features = false, features = [
    "events",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
    "bmp",
] }
nucleo-matcher = "0.3.1"
anyhow = "1.0.102"
