[package]
name = "vellum"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.29"
fuzzy-matcher = "0.3"
ratatui = "0.30"
common = { workspace = true }
fast_image_resize = "6.0"
fastrand = { version = "2.3", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "dds",
    "exr",
    "ff",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
resvg = { version = "0.47" }
thiserror = "2"
jxl-oxide = { version = "0.12", features = ["image"], optional = true }

[features]
all-formats = ["avif", "jxl"]
avif = ["image/avif-native"]
jxl = ["dep:jxl-oxide"]
