[package]
name = "vellum"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = [
    "crossterm",
] }
common = { workspace = true }
fast_image_resize = "6.0.0"
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "dds",
    "exr",
    "ff",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
resvg = { version = "0.47.0" }
thiserror = "2.0.18"
jxl-oxide = { version = "0.12.5", features = ["image"], optional = true }

[features]
all-formats = ["avif", "jxl"]
avif = ["image/avif-native"]
jxl = ["dep:jxl-oxide"]
