[package]
name = "vellum-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Terminal UI client for controlling vellumd"

[[bin]]
name = "vellum-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

vellum-ipc = { path = "../vellum-ipc" }

ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "4.2"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
