[package]
name = "vellumd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Wayland-native wallpaper daemon for wlroots compositors"

[[bin]]
name = "vellumd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

vellum-ipc = { path = "../vellum-ipc" }

smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
